@@ -42,10 +42,17 @@ AC_SUBST(DISTCHECK_CONFIG_FLAGS)
 echo "configuring ${PACKAGE_NAME} ${PACKAGE_VERSION}${PACKAGE_VERSION_ADDENDUM}"
 AC_CANONICAL_SYSTEM
 
+# Compute newest and oldest interface numbers.
+MAGICK_LIB_INTERFACE_NEWEST=$MAGICK_LIBRARY_CURRENT
+MAGICK_LIB_INTERFACE_OLDEST=`expr ${MAGICK_LIBRARY_CURRENT} - ${MAGICK_LIBRARY_AGE}`
+
 # Substitute Magick library versioning
 AC_SUBST(MAGICK_LIBRARY_CURRENT)dnl
 AC_SUBST(MAGICK_LIBRARY_REVISION)dnl
 AC_SUBST(MAGICK_LIBRARY_AGE)dnl
+
+AC_SUBST(MAGICK_LIB_INTERFACE_NEWEST)
+AC_SUBST(MAGICK_LIB_INTERFACE_OLDEST)
 
 # Substitute Magick++ library versioning
 AC_SUBST(MAGICK_PLUS_PLUS_LIBRARY_CURRENT)
