@@ -19,7 +19,7 @@ Leonard Rosenthol.
 <format man,html>
 <sect NAME="copy">Copyright
 <p>
-<s>Copyright (C) 2002 - 2008 GraphicsMagick Group, an organization
+<s>Copyright (C) 2002 - 2010 GraphicsMagick Group, an organization
 dedicated to making software imaging solutions freely available.</s></p>
 <p>
 <s>Permission is hereby granted, free of charge, to any person obtaining a
