@@ -1,5 +1,5 @@
 /*
-  Copyright (C) 2003 - 2009 GraphicsMagick Group
+  Copyright (C) 2003 - 2010 GraphicsMagick Group
   Copyright (C) 2002 ImageMagick Studio
   Copyright 1991-1999 E. I. du Pont de Nemours and Company
  
@@ -34,13 +34,28 @@ extern "C" {
   identifying the release.
 */
 #define MagickPackageName "@PACKAGE_NAME@"
-#define MagickCopyright  "Copyright (C) 2002-2009 GraphicsMagick Group.\nAdditional copyrights and licenses apply to this software.\nSee http://www.GraphicsMagick.org/www/Copyright.html for details."
+#define MagickCopyright  "Copyright (C) 2002-2010 GraphicsMagick Group.\nAdditional copyrights and licenses apply to this software.\nSee http://www.GraphicsMagick.org/www/Copyright.html for details."
 #define MagickLibVersion  @MAGICK_LIB_VERSION@
 #define MagickLibVersionText  "@MAGICK_LIB_VERSION_TEXT@"
 #define MagickLibVersionNumber @MAGICK_LIB_VERSION_NUMBER@
 #define MagickChangeDate   "@PACKAGE_CHANGE_DATE@"
 #define MagickReleaseDate  "@PACKAGE_RELEASE_DATE@"
 
+/*
+  The MagickLibInterfaceNewest and MagickLibInterfaceOldest defines
+  provide both the newest and oldest interfaces supported by the
+  library.  The 'newest' interface is incremented if new interfaces
+  are added to the library.  The 'oldest' interface is reset to the
+  value of 'newest' if an existing interface is changed incompatibly,
+  or an interface is removed.  This scheme is similar to that used by
+  ELF libraries.
+
+  Note that the values used are related to those in
+  MagickLibVersionNumber, but these are broken out and simplified so
+  that they can be easily used in C pre-processor logic.
+*/
+#define MagickLibInterfaceNewest @MAGICK_LIB_INTERFACE_NEWEST@
+#define MagickLibInterfaceOldest @MAGICK_LIB_INTERFACE_OLDEST@
 
 #if (QuantumDepth == 8)
 #define MagickQuantumDepth  "Q8"
