@@ -1,4 +1,4 @@
-.TH gm 1 "2009/04/21" "GraphicsMagick"
+.TH gm 1 "2010/01/05" "GraphicsMagick"
 .TP
 .in 15
 .in 15
@@ -8574,7 +8574,7 @@ based on his Zoom program.
 spatial subdivision color reduction algorithm is based on his Img software.
 .SH COPYRIGHT
 
-\fBCopyright (C) 2002 - 2008 GraphicsMagick Group, an organization
+\fBCopyright (C) 2002 - 2010 GraphicsMagick Group, an organization
 dedicated to making software imaging solutions freely available.\fP
 
 \fBPermission is hereby granted, free of charge, to any person obtaining a
