@@ -21,6 +21,15 @@
 </tr>
 </table>
 <p>
+2010-01-05  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> magick/version.h.in: Added MagickLibInterfaceNewest and
+        MagickLibInterfaceOldest preprocessor defines so that applications
+        may easily test for library versions while compiling.
+
+</UL>
+<p>
 2009-12-04  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
@@ -336,5 +345,5 @@ package; otherwise see http://www.graphicsmagick.org/www/Copyright.html.
 <hr>
 <P ALIGN=CENTER><FONT FACE="Verdana, Arial, Helvetica, sans-seri"><A HREF="Copyright.html">Copyright</A>
 <FONT FACE="Abadi Mt Condensed Extra Bold">&copy;</FONT>
-GraphicsMagick Group 2002, 2003, 2004</FONT></P></BODY>
+GraphicsMagick Group 2002-2010</FONT></P></BODY>
 </HTML>
