@@ -537,6 +537,6 @@ otherwise see http://www.graphicsmagick.org/www/Copyright.html.</strong>
 
 [<a href="../index.html">Home</a>] [<a href="utilities.html">Utilities Index</a>]
 <BR>
-<p align=center <a href="Copyright.html">Copyright &#169; GraphicsMagick Group 2002, 2003, 2004</a></p></td>
+<p align=center <a href="Copyright.html">Copyright &#169; GraphicsMagick Group 2002-2010</a></p></td>
 </tr></table>
 </body></html>
