@@ -2029,7 +2029,7 @@ color="#FFFFFF"><font size="+1">
 <table width="94%" border="0" cellspacing="0" cellpadding="8">
 <tr><td width="3%"><br></td><td>
 <p>
-<strong>Copyright (C) 2002 - 2008 GraphicsMagick Group, an organization
+<strong>Copyright (C) 2002 - 2010 GraphicsMagick Group, an organization
 dedicated to making software imaging solutions freely available.</strong>
 <p>
 <strong>Permission is hereby granted, free of charge, to any person obtaining a
@@ -2068,6 +2068,6 @@ otherwise see http://www.graphicsmagick.org/www/Copyright.html.</strong>
 
 [<a href="../index.html">Home</a>] [<a href="utilities.html">Utilities Index</a>]
 <BR>
-<p align=center <a href="Copyright.html">Copyright &#169; GraphicsMagick Group 2002, 2003, 2004</a></p></td>
+<p align=center <a href="Copyright.html">Copyright &#169; GraphicsMagick Group 2002-2010</a></p></td>
 </tr></table>
 </body></html>
